Docsite: fix small screen clipping issue in hero/framework install

--- a/packages/docs/src/components/Hero/frameworkinstall.module.css
+++ b/packages/docs/src/components/Hero/frameworkinstall.module.css
@@ -10,6 +10,7 @@
 .tabsHeader {
   display: flex;
   border-bottom: 1px solid var(--site-border);
+  overflow-x: auto;
 }
 
 .tab {
